Refactoring code cleanup